========================
:author:      Laurent Laville
:email:       pear@laurent-laville.org
:stylesdir:   styles
:scriptsdir:  js

== Version 2.9.0 (2012-10-29)

.Additions and changes:
* all required resources used now the default autoloader
* allow to run either a stand-alone or pear installed version
* Reports refactoring (33 percent code reduced)
* Source, Database and Reference reports
will not be print anymore on standard output when --report-file option used
* CAUTION: BC breaks with API 2.8.0 with the new filter system

.Bug fixes:
* PHP 5.4 raises notice error (Array to string conversion) in file cache, while PHP 5.2 and 5.3 did not
* standard reference fixed: mkdir mode parameter is required since PHP 4.0.0 and not 4.2.0 (it became optional)


== Version 2.8.1 (2012-09-28)

.Additions and changes:
* none

.Bug fixes:
* fixed latest version of standard and Core references
* fixed curl reference about new PHP 5.4 constants
* fixed default version about anonymous function
* phpci list command raises notice errors


== Version 2.8.0 (2012-09-15)

.Versions summary:
* 2.8.0 support all PHP versions until 5.4.7
* 2.7.0 support all PHP versions until 5.4.6
* 2.6.0 support all PHP versions until 5.4.5
* 2.5.0 support all PHP versions until 5.4.4
* 2.4.0 support all PHP versions until 5.4.3
* 2.3.0 support all PHP versions until 5.4.0
* 2.2.0 support all PHP versions until 5.3.10
* 2.1.0 support all PHP versions until 5.3.8

.Additions and changes:
* add 5 new references data dictionnaries related to extensions:
  amqp, geoip, inclued, mongo, XCache
* introduces a new Reference API that allow to filter elements (interfaces, classes, functions, constants)
on php version or extension release, with or without a particular relationship (like operator in version_compare)
* Full filter support for 25 extensions (that have all releases documented):
  ** amqp (1.0.7)
  ** apc (3.1.13)
  ** enchant (1.1.0)
  ** fileinfo (1.0.5)
  ** filter (0.11.0)
  ** geoip (1.0.8)