@@ -23,8 +23,8 @@ content of dictionary references.
   <email />
   <active>yes</active>
  </contributor>
- <date>2012-10-03</date>
- <time>18:29:10</time>
+ <date>2012-10-04</date>
+ <time>10:36:48</time>
  <version>
   <release>2.9.0</release>
   <api>2.9.0</api>
@@ -42,6 +42,7 @@ Additions and changes:
 - Source, Database and Reference reports
 will not be print anymore on standard output when --report-file option used
 - CAUTION: BC breaks with API 2.8.0 with the new filter system
+- list-references does not require --reference option anymore (always used ALL)
 
 Bug fixes:
 - PHP 5.4 raises notice error (Array to string conversion) in file cache, while PHP 5.2 and 5.3 did not
@@ -1326,7 +1327,7 @@ Bug fixes:
     <release>stable</release>
     <api>stable</api>
    </stability>
-   <date>2012-10-03</date>
+   <date>2012-10-04</date>
    <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD License</license>
    <notes>
 Additions and changes:
@@ -1336,6 +1337,7 @@ Additions and changes:
 - Source, Database and Reference reports
 will not be print anymore on standard output when --report-file option used
 - CAUTION: BC breaks with API 2.8.0 with the new filter system
+- list-references does not require --reference option anymore (always used ALL)
 
 Bug fixes:
 - PHP 5.4 raises notice error (Array to string conversion) in file cache, while PHP 5.2 and 5.3 did not
